Fix a recent CSS bug in the upload progress bar, and delay showing it to prevent flickering

--- a/extraterm/resources/themes/atomic-light-ui/gui-upload-progress.scss
+++ b/extraterm/resources/themes/atomic-light-ui/gui-upload-progress.scss
@@ -2,13 +2,20 @@
  * Copyright 2018 Simon Edwards <simon@simonzone.com>
  */
 
- @import "bootstrap/variables";
+@import "bootstrap/variables";
  
- .container {
+.top_container {
   border: 1px solid $dropdown-border;
   border-radius: $border-radius-base;
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
 
   box-shadow: 0 0 pxToRem(10px) $base-border-color;
+  
+  background-color: $body-bg;
+  padding: $panel-body-padding;
+}
+
+.upload_hide {
+  opacity: 0;
 }
